[tool.poetry]
name = "poke_dashboard"
version = "0.1.0"
description = "An interactive dashboard for pokemons"
authors = ["Philip Faurholdt <philip.faurholdt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
streamlit = "^1.9.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
